# dw_do_zero

./: pyproject.toml
back-end/fake-api/: produtos.csv  start.py
