[tool.poetry]
name = "criando-um-dw-do-zero"
version = "0.1.0"
description = ""
authors = ["samuel_natividade <samuell.natividade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
faker = "^30.8.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
